# api-fastapi-example

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  security.py  settings.py
app/routes/: auth.py  users.py
migrations/: env.py
migrations/versions/: f4fa08bbafda_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
