[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dárley Raffael <darleyraffael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
start = "uvicorn app.main:app --reload"